app/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  input, label, a {
    cursor: pointer;
  }
}

@layer utilities {
  .font-variant-caps-small {
    font-variant-caps: all-small-caps;
  }
  .font-variant-caps-normal {
    font-variant-caps: normal;
  }

  .contained {
    @apply max-w-[80rem] mx-auto;
  }
}

html,
body {
  @apply bg-gray-950 text-[#efefef];
}

